# gradient_acc

./: AP_Project.ipynb  pyproject.toml
